<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ibanViewModel"
            type="com.rasathish.currencyconversion.presentation.ibanvalidation.IBanValidationViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/Tv_topLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13sdp"
            android:text="@string/iban_validation"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/edit_text_color"
            android:fontFamily="@font/poppins_bold"/>


        <EditText
            android:id="@+id/Et_currencyAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/bg_edit_outline_border"
            android:hint="@string/enter_iban_number"
            android:inputType="text"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@={ibanViewModel.ibanNumber}"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintTop_toBottomOf="@+id/Tv_topLabel" />


        <Button
            android:id="@+id/Bt_validate"
            android:layout_width="wrap_content"
            android:text="@string/validate"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/Et_currencyAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/Cv_IbanDetail"
            android:layout_margin="@dimen/_20sdp"
            android:layout_width="match_parent"
            app:cardElevation="@dimen/_10sdp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/Bt_validate"
            app:cardBackgroundColor="@color/white"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_bankName"
                    android:layout_width="wrap_content"
                    android:text="@{`Bank Name: `+ibanViewModel.ibanBankName}"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/tv_Country"
                    android:layout_width="wrap_content"
                    android:text="@{`Country: `+ibanViewModel.ibanCountry}"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_City"
                    android:layout_width="wrap_content"
                    android:text="@{`City: `+ibanViewModel.ibanCity}"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_Message"
                    android:layout_width="wrap_content"
                    android:text="@{`Status: `+ibanViewModel.ibanStatusMessage}"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"/>


                <Button
                    android:id="@+id/Bt_proceed"
                    android:text="@string/proceed"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/Cv_IbanDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>



        </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/Bt_skip"
            android:text="@string/skip"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/Pb_loading"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>